--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -155,6 +155,7 @@
             var type = $("#newInvoicePurchaseType").val();
 
             var datatosend={
+                id: 5,
                 addressId: selectedAddress,
                 customerId: customerId,
                 amount: amount,
@@ -164,10 +165,9 @@
             };
 
             $.ajax({
-                type: "PUT",
+                type: "POST",
                 method:"POST",
                 url: "invoice/",
-                dataType: 'JSON',
                 data: datatosend,
                 success: function(response){
                     debugger;
